--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -27,12 +27,10 @@
 #
 #
 
-
-# kevin@system, 2019/06/08, add carrier rc
-import /vendor/etc/init/hw/init.oem.carrier.rc
+import /vendor/etc/init/hw/init.oem.rc
 
 on early-init
-    exec u:r:vendor_modprobe:s0 -- /vendor/bin/modprobe -a -d /vendor/lib/modules audio_wglink audio_q6_pdr audio_q6_notifier audio_apr audio_adsp_loader audio_q6 audio_native audio_usf audio_pinctrl_wcd audio_swr audio_platform audio_hdmi audio_wcd_spi audio_stub audio_wcd_core audio_wsa881x audio_tfa9894 audio_wcd9360 audio_hdmi audio_machine_msmnile
+    exec u:r:vendor_modprobe:s0 -- /vendor/bin/modprobe -a -d /vendor/lib/modules audio_wglink audio_q6_pdr audio_q6_notifier audio_apr audio_adsp_loader audio_q6 audio_native audio_usf audio_pinctrl_wcd audio_swr audio_platform audio_hdmi audio_wcd_spi audio_stub audio_wcd_core audio_wsa881x audio_wcd9360 audio_hdmi audio_machine_msmnile audio_tfa9894
     write /proc/sys/kernel/sched_boost 1
     symlink /data/tombstones /tombstones
 
@@ -58,39 +56,10 @@ on fs
     chmod 0771 /mnt/vendor/persist
     restorecon_recursive /mnt/vendor/persist
     mkdir /mnt/vendor/persist/data 0700 system system
-#liuhaituo@MM.Audio, 2019/6/25, chmod to support audio_hal and sensor hal
-    chmod 0666 /dev/audio_ultrasound
-    chmod 0666 /dev/sensor_ultrasound
-
-    # bin.zhong@ASTI, 2019/6/17, add for smartboost
-    chown system system /sys/module/smartboost_core/parameters/page_cache_reside_switch
-    # ken.lin@ASTI, 2019/6/21, add for fsc
-    chown system system /sys/module/fsc/parameters/enable
-    chmod 0664 /sys/module/fsc/parameters/enable
-
-    #miao.guom@system Bug35643 mkdir and mount op2
-    mkdir /mnt/vendor/op2 0660 system system
-    mount ext4 /dev/block/bootdevice/by-name/op2 /mnt/vendor/op2 noatime nosuid nodev barrier=1
-
-    #yumei.su@system Bug55987 mkdir rbr_log
-    mkdir /mnt/vendor/op2/rbr_log 0770 system system
-
-    #yumei.su@system Bug35643 mkdir and mount op1
-    mkdir /mnt/vendor/op1 0660 system system
-    mount ext4 /dev/block/bootdevice/by-name/op1 /mnt/vendor/op1 noatime nosuid nodev barrier=1
-    mkdir /mnt/vendor/oneplus 0660 system system
 
 on post-fs
     # set RLIMIT_MEMLOCK to 64MB
     setrlimit 8 67108864 67108864
-
-    #miao.guom@system Bug35643 mkdir recovery
-    # mkdir /op2/recovery 0770 root system
-    mkdir /mnt/vendor/op2/recovery 0770 root system
-    # ifdef vendor_edit remove SPU
-    # start vendor.spdaemon
-    # start vendor.sec_nvm
-    # endif vendor_edit
 
 on late-fs
     wait_for_prop hwservicemanager.ready true
@@ -106,12 +75,11 @@ on post-fs-data
     mkdir /data/vendor/hbtp 0750 system system
     mkdir /data/vendor/nnhal 0700 system system
 
-on early-boot
+on boot
     start vendor.sensors
 
-# For cpusets initialize for Silver Only first and then Silver + Gold
-# Silver Only configuration cannot work with 0-7
-on boot
+    # For cpusets initialize for Silver Only first and then Silver + Gold
+    # Silver Only configuration cannot work with 0-7
     chown system system /sys/kernel/hbtp/display_pwr
     chown system system /sys/kernel/qvr_external_sensor/fd
     start rmt_storage
@@ -127,11 +95,6 @@ on boot
     write /dev/cpuset/foreground/boost/cpus 0-7
     write /dev/cpuset/background/cpus 0-7
     write /dev/cpuset/system-background/cpus 0-7
-
-    # ifdef VENDOR_EDIT
-    # chris.gao@SYSTEM, 2019/3/2, [GCE-9966] Optimize surfaceflinger
-    write /dev/cpuset/display/cpus 4-7
-    # endif VENDOR_EDIT
 
 # Add a cpuset for the camera daemon
 # We want all cores for camera
@@ -149,45 +112,6 @@ on boot
     setprop vendor.usb.dpl.inst.name "dpl"
     setprop vendor.usb.qdss.inst.name "qdss"
     setprop vendor.usb.controller a600000.dwc3
-    setprop sys.usb.configfs 1
-
-#display add 2018/10/19  @lichao_display
-    chmod 0666 /sys/class/drm/card0-DSI-1/SRGB
-    chmod 0666 /sys/class/drm/card0-DSI-1/DCI_P3
-    chmod 0666 /sys/class/drm/card0-DSI-1/hbm
-    chmod 0666 /sys/class/drm/card0-DSI-1/aod
-    chmod 0666 /sys/class/drm/card0-DSI-1/night_mode
-    chmod 0666 /sys/class/drm/card0-DSI-1/panel_serial_number
-    chmod 0666 /sys/class/drm/card0-DSI-1/oneplus_mode
-    chmod 0666 /sys/class/drm/card0-DSI-1/adaption_mode
-    chmod 0666 /sys/class/drm/card0-DSI-1/notify_fppress
-    chmod 0666 /sys/class/drm/card0-DSI-1/dim_alpha
-    chmod 0666 /sys/class/drm/card0-DSI-1/notify_dim
-    chmod 0666 /sys/class/drm/card0-DSI-1/notify_aod
-    chmod 0666 /sys/class/drm/card0-DSI-1/force_screenfp
-    chmod 0666 /sys/class/drm/card0-DSI-1/native_display_p3_mode
-    chmod 0666 /sys/class/drm/card0-DSI-1/native_display_wide_color_mode
-    chmod 0666 /sys/class/drm/card0-DSI-1/native_display_srgb_color_mode
-    chmod 0666 /sys/devices/platform/soc/soc:qcom,dsi-display-primary/dynamic_dsi_clock
-    chown radio radio /sys/devices/platform/soc/soc:qcom,dsi-display-primary/dynamic_dsi_clock
-    chmod 0666 /sys/class/drm/card0-DSI-1/native_display_loading_effect_mode
-    chmod 0666 /sys/class/drm/card0-DSI-1/native_display_customer_srgb_mode
-    chmod 0666 /sys/class/drm/card0-DSI-1/native_display_customer_p3_mode
-    chmod 0666 /sys/class/drm/card0-DSI-1/dsi_seed_command
-    chmod 0666 /sys/class/drm/card0-DSI-1/dimlayer_bl_en
-    chmod 0666 /sys/class/drm/card0-DSI-1/dither_en
-    chmod 0666 /sys/class/drm/card0-DSI-1/dp_en
-    chmod 0666 /sys/class/drm/card0-DSI-1/dimming_speed
-    chmod 0666 /sys/bus/platform/devices/vendor:infrared_pl/infrared_power_enable
-#liuhaituo@MM.Audio, 2019/6/17, add for dump audio related codec
-    chmod 0644 /d/regmap/tavil-slim-pgd/registers
-    chmod 0644 /d/regmap/0-0034/registers
-    chmod 0644 /d/regmap/0-0035/registers
-    chmod 0644 /d/regmap/0-0042/registers
-    restorecon /sys/kernel/debug/regmap/0-0034/registers
-    restorecon /sys/kernel/debug/regmap/0-0035/registers
-    restorecon /sys/kernel/debug/regmap/0-0042/registers
-    restorecon /sys/kernel/debug/regmap/tavil-slim-pgd/registers
 
 on property:vendor.display.lcd_density=560
    setprop dalvik.vm.heapgrowthlimit 256m
@@ -197,21 +121,6 @@ on property:vendor.display.lcd_density=640
 
 on boot && property:persist.vendor.usb.controller.default=*
     setprop vendor.usb.controller ${persist.vendor.usb.controller.default}
-
-on property:vendor.usb.controller=*
-    setprop sys.usb.controller ${vendor.usb.controller}
-
-#Load WLAN driver
-on property:wlan.driver.status=ok
-    start load_wlan_driver
-
-service load_wlan_driver /vendor/bin/sh /vendor/bin/load_wlan_driver.sh
-    class main
-    disabled
-    oneshot
-
-on property:vendor.load.ftm.wlan.driver=ok
-    start load_wlan_driver
 
 #pd-mapper
 service vendor.pd_mapper /vendor/bin/pd-mapper
@@ -256,12 +165,12 @@ service vendor.sec_nvm /vendor/bin/sec_nvm
 
 service vendor.thermal-engine /vendor/bin/thermal-engine
    class main
-   user system
+   user root
    socket thermal-send-client stream 0666 system system
    socket thermal-recv-client stream 0660 system system
    socket thermal-recv-passive-client stream 0666 system system
    socket thermal-send-rule stream 0660 system system
-   group system
+   group root
 
 
 service vendor.lowi /vendor/bin/sscrpcd
@@ -287,7 +196,6 @@ service cnss_diag /system/vendor/bin/cnss_diag -q -f -t HELIUM
     class main
     user system
     group system wifi inet sdcard_rw media_rw diag
-    # bingham.fang@Connectivity, 2019/05/23, add for wlan logs function
     disabled
     oneshot
 
